--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # --- USER CONFIGURATION --- #
 ##############################
 
-title: yo
+title: Neet Aristocracy | Home
 description: A navigable, organised hypertext personal knowledge base
 url: https://exocore.netlify.app
 repository: remiliacorp/exocore
