--- a/exocore/data/user.yml
+++ b/exocore/data/user.yml
@@ -7,7 +7,7 @@ user_name: I like girls
 
 
 # The URL that your name will point to ('/' means home):
-profile_link: /
+profile_link: https://www.youtube.com/watch?v=cC3eLp8vAc0
 
 
 # The user image displayed on your profile card. You can edit this by dropping an image with the name 'pfp.png' into 'assets/imgs', or editing the path below:
