--- a/exocore/data/user.yml
+++ b/exocore/data/user.yml
@@ -3,7 +3,7 @@
 # You can edit this file to change your user details
 
 # The name displayed on your profile card:
-user_name: I like girls
+user_name: Xiao Wangzi
 
 
 # The URL that your name will point to ('/' means home):
